--- a/Styles/form.css
+++ b/Styles/form.css
@@ -1,3 +1,151 @@
-* {
-    text-align: center;
+@charset "UTF-8";
+
+h1{
+    background-color: #84C0DA; 
+    color: #ffffff;
+    font-size: 30px;
+ }
+
+ h2{
+	width: 35.33%;
+	margin: 30px;
+    font-size: 20px;
+ }
+
+
+.cp_iptxt {
+	position: relative;
+	width: 35.33%;
+	margin: 30px 3%;
+}
+.cp_iptxt input[type='text'] {
+	font: 15px/24px sans-serif;
+	box-sizing: border-box;
+	width: 100%;
+	padding: 0.5em;
+	padding-left: 30px;
+	letter-spacing: 2px;
+	border: 0;
+}
+
+.cp_iptxt input[type='text']:focus {
+	outline: none;
+}
+
+.cp_iptxt input[type='text']:focus::after {
+	outline: none;
+}
+
+.cp_iptxt::after {
+	display: block;
+	width: 100%;
+	height: 5px;
+	margin-top: -1px;
+	content: '';
+	border-width: 0 2px 2px 2px;
+	border-style: solid;
+	border-color: #39a9f3;
+}
+
+
+p{
+    font-size: 20px;
+    box-sizing: border-box;
+    background-color: #ebebeb;
+    line-height: 2;
+}
+
+.bold {
+    font-weight: bold;
+}
+
+
+
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: inherit;
+  box-sizing: inherit;
+}
+
+html {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  font-size: 62.5%;
+}
+
+.btn,
+a.btn,
+button.btn {
+  font-size: 1.6rem;
+  font-weight: 700;
+  line-height: 1.5;
+  position: relative;
+  display: inline-block;
+  padding: 1rem 4rem;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  text-align: center;
+  vertical-align: middle;
+  text-decoration: none;
+  letter-spacing: 0.1em;
+  color: #212529;
+  border-radius: 0.5rem;
+}
+
+a.btn {
+  font-weight: normal;
+
+  color: #fff;
+  border-radius: 0;
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    color-stop(40%, #ff3cac),
+    to(#562b7c)
+  );
+  background-image: -webkit-linear-gradient(left, #84C0DA 40%, #003682 100%);
+  background-image: linear-gradient(90deg, #84C0DA 40%, #003682 100%);
+}
+
+a.btn:after {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+
+  content: "";
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(#ff3cac),
+    color-stop(#562b7c),
+    to(#2b86c5)
+  );
+
+  background-image: -webkit-linear-gradient(left, #84C0DA, #005EAC, #003682);
+
+  background-image: linear-gradient(90deg, #84C0DA, #005EAC, #003682);
+}
+
+
+
+a.btn:hover {
+  color: #fff;
+}
+
+a.btn:hover:after {
+  opacity: 0;
 }
