--- a/Styles/form.css
+++ b/Styles/form.css
@@ -141,71 +141,13 @@ button.btn {
   border-radius: 0.5rem;
 }
 
-a.btn-gradient {
-  display:block;
-  width:30%;
-  margin:0 auto;
-  font-weight: bold;
-  border-radius: 0;
-  color: #fff;
-  
-  background-image: -webkit-gradient(
-    linear,
-    left top,
-    right top,
-    color-stop(40%, #ff3cac),
-    to(#562b7c)
-  );
-  background-image: -webkit-linear-gradient(left, #84C0DA 40%, #005EAC 100%);
-  background-image: linear-gradient(90deg, #84C0DA 40%, #005EAC 100%);
-}
-
-a.btn-gradient:after {
-  position: absolute;
-  border-radius: 0;
-  top: 0;
-  left: 0;
-
-  width: 100%;
-  height: 100%;
-
-  content: "";
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
-
-  background-image: -webkit-gradient(
-    linear,
-    left top,
-    right top,
-    from(#ff3cac),
-    color-stop(#562b7c),
-    to(#2b86c5)
-  );
-
-  background-image: -webkit-linear-gradient(left, #84C0DA, #005EAC, #003682);
-
-  background-image: linear-gradient(90deg, #84C0DA, #005EAC, #003682);
-}
-
-a.btn-gradient span {
-  position: relative;
-  z-index: 1;
-}
-
-a.btn-gradient:hover {
-  color: #fff;
-}
-
-a.btn-gradient:hover:after {
-  opacity: 0;
-}
 
 a.btn-backhome {
     border: 2px solid #005EAC;
     border-radius: 0;
     background: #fff;
     display:block;
-    width:10%;
+    width:60%;
     font-size: 5%;
     color: #005EAC;
     margin: auto;
@@ -215,4 +157,74 @@ a.btn-backhome {
     color: #fff;
     background: #005EAC;
   }
+
+
   
+.but {
+  display:block;
+  font-weight: bold;
+  border:1px solid #ffffff;
+  width:65%;
+  margin:0 auto;
+  border-radius : 0;          /* 角丸       */
+  font-size     : 1.6rem;        /* 文字サイズ */
+  text-align    : center;      /* 文字位置   */
+  cursor        : pointer;     /* カーソル   */
+  padding       : 1rem 4rem;   /* 余白       */
+ background-image: -webkit-linear-gradient(left, #84C0DA, #005EAC, #003682);
+
+  background-image: linear-gradient(90deg, #84C0DA, #005EAC, #003682);     /* 背景色     */
+  color         : #ffffff;     /* 文字色     */
+  line-height   : 1.5;         /* 1行の高さ  */
+  transition    : all 0.3s;         /* なめらか変化 */
+  
+}
+.but:hover {
+  background    : #ffffff; 
+  background-image: -webkit-linear-gradient(left, #84C0DA 40%, #005EAC 100%);
+  background-image: linear-gradient(90deg, #84C0DA 40%, #005EAC 100%);   
+}
+
+#page_top{
+  width: 100px;
+  height: 60px;
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  background: #005EAC;
+}
+#page_top a{
+  position: relative;
+  display: block;
+  width: 100px;
+  height: 60px;
+  text-decoration: none;
+}
+#page_top a::before{
+  font-family: 'Font Awesome 5 Free';
+  font-weight: 900;
+  content: '\f102';
+  font-size: 25px;
+  color: #fff;
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  top: -25px;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  margin: auto;
+  text-align: center;
+}
+#page_top a::after{
+  content: 'PAGE TOP';
+  font-size: 13px;
+  color: #fff;
+  position: absolute;
+  top: 30px;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  margin: auto;
+  text-align: center;
+}
