--- a/Styles/index.css
+++ b/Styles/index.css
@@ -1,3 +1,173 @@
-* {
-    text-align: center;
+@charset "UTF-8";
+
+@media screen and (max-width:480px) {
+  .p {
+		width: 100%;
+		margin: 0px 0 10px 0;
+	}
+ 
+	main {
+		width: 100%;
+	}
+ 
 }
+
+body {
+  padding-top: 90px;
+}
+
+header {
+  width: 100%; 
+  height: 13%;
+  color: #ffffff;
+  background-image: -webkit-linear-gradient(left, #84C0DA, #005EAC, #003682);
+
+  background-image: linear-gradient(90deg, #84C0DA, #005EAC, #003682);
+  padding: 20px 50px; 
+  box-sizing: border-box;
+  position: fixed; 
+  top: 0; 
+  left: 0; 
+  display: flex; 
+  font-size: 15%
+}
+
+header .gnav .menu {
+  display: flex; 
+}
+
+header .gnav .menu li {
+  list-style: none;
+}
+
+header .gnav .menu li + li {
+  margin-left: 40px; /* メニューそれぞれに間隔をあけるため */
+}
+
+
+main {
+  height: 100vw; /* スクロールの演出を見れるようにmainに高さを指定 */
+  
+}
+
+.head{
+    color: #ffffff;
+    font-weight: bold;
+}
+
+h1{
+  font-size: 20px;
+}
+
+
+  .form {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 auto;
+  padding: 1em 2em;
+  width: 60%;
+  color: #005EAC;
+  border: 2px solid #005EAC;
+  font-size: 20px;
+  font-weight: 700;
+  background-color: rgb(255, 255, 255);
+  transition: 0.3s;
+  text-align: center;
+  height:15%;
+  line-height:15%;
+  border-radius: 100vh;
+  margin-top: 5%;
+}
+
+.form:after {
+  content: '';
+  width: 15px;
+  height: 15px;
+  border-top: 4px solid #005EAC;
+  border-right: 4px solid #005EAC;
+  transform: rotate(45deg);
+  margin: 2%;
+  
+}
+
+.form:hover {
+  text-decoration: none;
+  background-color: #005EAC;
+  color: #ffffff
+}
+
+
+.result {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+    padding: 1em 2em;
+    width: 60%;
+    color: #005EAC;
+    border: 2px solid #005EAC;
+    font-size: 20px;
+    font-weight: 700;
+    background-color: rgb(255, 255, 255);
+    transition: 0.3s;
+    text-align: center;
+    height:15%;
+    line-height:15%;
+    border-radius: 100vh;
+    margin-top: 5%;
+  }
+  
+  .result:after {
+    content: '';
+    width: 15px;
+    height: 15px;
+    border-top: 4px solid #005EAC;
+    border-right: 4px solid #005EAC;
+    transform: rotate(45deg);
+    margin: 2%;
+    
+  }
+  
+  .result:hover {
+    text-decoration: none;
+    background-color: #005EAC;
+    color: #ffffff
+  }
+
+  .give {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+    padding: 1em 2em;
+    width: 60%;
+    color: #005EAC;
+    border: 2px solid #005EAC;
+    font-size: 20px;
+    font-weight: 700;
+    background-color: rgb(255, 255, 255);
+    transition: 0.3s;
+    text-align: center;
+    height:15%;
+    line-height:15%;
+    border-radius: 100vh;
+    margin-top: 5%;
+  }
+  
+  .give:after {
+    content: '';
+    width: 15px;
+    height: 15px;
+    border-top: 4px solid #005EAC;
+    border-right: 4px solid #005EAC;
+    transform: rotate(45deg);
+    margin: 2%;
+    
+  }
+  
+  .give:hover {
+    text-decoration: none;
+    background-color: #005EAC;
+    color: #ffffff
+  }
