--- a/Styles/index.css
+++ b/Styles/index.css
@@ -177,3 +177,35 @@ h1{
       color: rgb(92, 92, 92);
       text-align: center;
   }
+
+  .btn {
+    font-size: 1.6rem;
+    font-weight: bold;
+    line-height: 1.5;
+    position: relative;
+    display: inline-block;
+    padding: 1rem 4rem;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+    text-align: center;
+    text-decoration: none;
+    letter-spacing: 0.1em;
+    border: 2px solid #005EAC;
+    border-radius: 0;
+    background: #005EAC;
+    display:block;
+    width:60%;
+    font-size: 10%;
+    color: rgb(248, 248, 248);
+    margin: auto;
+    }
+    
+  .btn:hover {
+      color: #005EAC;
+      background: rgb(255, 255, 255);
+    }
