--- a/Styles/result.css
+++ b/Styles/result.css
@@ -6,6 +6,7 @@ header {
     width: 100%; 
     height: 50px; 
     color: #ffffff;
+    font-family:"MS Pゴシック",sans-serif;
     background-image: -webkit-linear-gradient(left, #84C0DA, #005EAC, #003682);
   
     background-image: linear-gradient(90deg, #84C0DA, #005EAC, #003682);
@@ -20,6 +21,7 @@ header {
   
 header .gnav .menu {
     display: flex; 
+    font-family:"MS Pゴシック",sans-serif;
 }
   
 header .gnav .menu li {
@@ -48,6 +50,7 @@ p{
     color: black;
     font-weight: bold;
     display: inline-block;
+    font-family:"MS Pゴシック",sans-serif;
 }
 
 
@@ -76,6 +79,7 @@ table{
     color: white;
     text-align: center;
     padding: 10px 0;
+    font-family:"MS Pゴシック",sans-serif;
   }
 
 
@@ -107,5 +111,6 @@ table{
     text-align: center;
     background-color: #eee;
     padding: 10px 0;
+    font-family:"MS Pゴシック",sans-serif;
     
   }
